--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <main>
         <section id="about">
           <h2>About Me</h2>
-          <p>Rahman Ralei is a web developer, programmer, and security expert based in Jakarta, Indonesia. He has extensive experience in developing web applications, managing databases, and implementing security measures to protect online assets.</p>
+          <p>Rahman Ralei is a web developer, programmer, and security expert based in Tangerang City, Indonesia. He has extensive experience in developing web applications, managing databases, and implementing security measures to protect online assets.</p>
         </section>
         <section id="skills">
           <h2>Skills</h2>
