--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <li>CSS</li>
             <li>JavaScript</li>
             <li>PHP</li>
+            <li>Python</li>
+            <li>C</li>
+            <li>C++</li>
             <li>SQL</li>
             <li>Penetration testing</li>
             <li>Security defense</li>
@@ -41,10 +44,10 @@
         <section id="portfolio">
           <h2>Portfolio</h2>
           <ul>
-            <li><a href="#">Project 1</a></li>
-            <li><a href="#">Project 2</a></li>
-            <li><a href="#">Project 3</a></li>
-            <li><a href="#">Project 4</a></li>
+            <li><a href="https://rasenmedia.my.id">Tools Web Based</a></li>
+            <li><a href="https://pelor1337.my.id">Pelor1337 Brand Checker</a></li>
+            <!-- li><a href="#">Project 3</a></li>
+            <li><a href="#">Project 4</a></li -->
           </ul>
         </section>
         <section id="contact">
