--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <ul>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#project">Project</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
@@ -41,11 +41,11 @@
             <li>Security defense</li>
           </ul>
         </section>
-        <section id="portfolio">
-          <h2>Portfolio</h2>
+        <section id="project">
+          <h2>Project</h2>
           <ul>
-            <li><a href="https://rasenmedia.my.id">Tools Web Based</a></li>
-            <li><a href="https://pelor1337.my.id">Pelor1337 Brand Checker</a></li>
+            <li><a href="https://rasenmedia.my.id">~ Tools Web Based</a></li>
+            <li><a href="https://pelor1337.my.id">~ Pelor1337 Brand Checker</a></li>
             <!-- li><a href="#">Project 3</a></li>
             <li><a href="#">Project 4</a></li -->
           </ul>
